[package]
name = "i"
version = "0.1.0"
authors = ["Nikita Zdanovitch <nikita.zdanovitch@trocafone.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
crossbeam-channel = "0.5"
image = "0.22"
pyxel = { version = "0.2", features=["images"] }
rapier2d = { version = "0.8", features=["simd-stable"] }
regex = "1"

[patch.crates-io]
pyxel = { git = 'https://github.com/Jbat1Jumper/pyxel', features=["images"] }
