[package]
name = "i"
version = "0.1.0"
authors = ["Nikita Zdanovitch <nikita.zdanovitch@trocafone.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_egui = "0.4"
heron = { version = "0.5", default-features = false, features=["2d"] }
image = "0.22"
pyxel = { version = "0.2", features=["images"] }
regex = "1"

[patch.crates-io]
pyxel = { git = 'https://github.com/Jbat1Jumper/pyxel', features=["images"] }
